# safe-infer

./: .gitignore  CMakeLists.txt  README.md
docs/: 01-overview.md  02-tensors.md  03-memory-safety.md  04-operations-graphs.md  05-graph-execution.md  06-failure-attacks.md  07-hardening-runtime.md  08-engineering-tradeoffs.md  09-capstone  09-capstone.md
examples/: simple_relu.cpp
examples/attacks/: missing_input.cpp  shape_mismatch.cpp
examples/capstone/: xor_relu.cpp
include/safe_infer/: executor.h  graph.h  op.h  planner.h  tensor.h  tensor_shape.h
src/: executor.cpp  planner.cpp  tensor.cpp  tensor_shape.cpp
tests/: test_const.cpp  test_executor.cpp  test_matmul.cpp  test_planner.cpp  test_tensor.cpp  test_tensor_shape.cpp
